hot database action

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,13 @@
 
   </head>
   <body>
-    <div id="words" class="word_list"></div>
+    <div id='subject'></div>"
+    <div id='attempts'></div>"
+    <div id='rj_answer'></div>"
+    <div id='kana_answer'></div>"
+    <div id='rj_overlay'></div>"
+    <div id='kana_overlay'></div>"
+    <input id="kana_entry" placeholder="かな"/>     
+    <input id="rj_entry" placeholder="Meaning (Eng)"/>
   </body>
 </html>
