--- a/public/index.html
+++ b/public/index.html
@@ -9,15 +9,16 @@
 
     <script src="/jquery.js" type="text/javascript" charset="utf-8"></script>
     <script src="/browserify.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/socket.io/socket.io.js" type="text/javascript"></script>
 
   </head>
   <body>
-    <div id='subject'></div>"
-    <div id='attempts'></div>"
-    <div id='rj_answer'></div>"
-    <div id='kana_answer'></div>"
-    <div id='rj_overlay'></div>"
-    <div id='kana_overlay'></div>"
+    <div id='subject'>Waiting for a word...</div>
+    <div id='attempts'></div>
+    <div id='rj_answer'></div>
+    <div id='kana_answer'></div>
+    <div id='rj_overlay'></div>
+    <div id='kana_overlay'></div>
     <input id="kana_entry" placeholder="かな"/>     
     <input id="rj_entry" placeholder="Meaning (Eng)"/>
   </body>
