--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,6 @@
     <title>Vocab</title>
     <meta charset="utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset: utf-8" />
-    <script src="/jquery.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/browserify.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/socket.io/socket.io.js" type="text/javascript"></script>
-    <link rel="stylesheet" type="text/css" href="/master.css" />
   </head>
   <body>
     <div id='subject'>Waiting for a word...</div>
@@ -19,4 +15,8 @@
     <input id="kana_entry" placeholder="かな"/>
     <input id="rj_entry" placeholder="Meaning (Eng)"/>
   </body>
+    <script src="/jquery.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/browserify.js" type="text/javascript" charset="utf-8"></script>
+    <script src="socket.io/socket.io.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="/master.css" />
 </html>
